LPS-63373 set image max width to prevent overflow in web content display, asset publisher and message boards

--- a/modules/apps/collaboration/message-boards/message-boards-web/src/main/resources/META-INF/resources/message_boards/css/main.scss
+++ b/modules/apps/collaboration/message-boards/message-boards-web/src/main/resources/META-INF/resources/message_boards/css/main.scss
@@ -90,6 +90,12 @@
 			padding-left: 0;
 		}
 
+		.message-content {
+			img {
+				max-width: 100%;
+			}
+		}
+
 		.reply-to-main-thread-container {
 			text-align: center;
 		}
